--- a/b.html
+++ b/b.html
@@ -50,8 +50,8 @@
         
 
         // parsing and collecting nodes and edges from the python
-        nodes = new vis.DataSet([{"id": 0, "label": 0, "shape": "dot"}, {"id": 1, "label": 1, "shape": "dot"}, {"id": 2, "label": 2, "shape": "dot"}]);
-        edges = new vis.DataSet([{"color": "rgba(40,174,127,0.7)", "from": 0, "label": "a", "to": 1, "width": 5}, {"color": "rgba(40,174,127,0.7)", "from": 1, "label": "b", "to": 2, "width": 5}]);
+        nodes = new vis.DataSet([{"id": 0, "label": 0, "shape": "dot"}, {"id": 1, "label": 1, "shape": "dot"}, {"id": 2, "label": 2, "shape": "dot"}, {"id": 3, "label": 3, "shape": "dot"}, {"id": 4, "label": 4, "shape": "dot"}, {"id": 5, "label": 5, "shape": "dot"}, {"id": 6, "label": 6, "shape": "dot"}, {"id": 7, "label": 7, "shape": "dot"}, {"id": 8, "label": 8, "shape": "dot"}]);
+        edges = new vis.DataSet([{"color": "rgba(40,174,127,0.7)", "from": 0, "label": "a", "to": 1, "width": 5}, {"color": "rgba(40,174,127,0.7)", "from": 0, "label": "g", "to": 4, "width": 5}, {"color": "rgba(40,174,127,0.7)", "from": 0, "label": "n", "to": 6, "width": 5}, {"color": "rgba(40,174,127,0.7)", "from": 0, "label": "f", "to": 8, "width": 5}, {"color": "rgba(40,174,127,0.7)", "from": 1, "label": "b", "to": 2, "width": 5}, {"color": "rgba(40,174,127,0.7)", "from": 1, "label": "d", "to": 3, "width": 5}, {"color": "rgba(40,174,127,0.7)", "from": 1, "label": "e", "to": 8, "width": 5}, {"color": "rgba(40,174,127,0.7)", "from": 2, "label": "c", "to": 3, "width": 5}, {"color": "rgba(40,174,127,0.7)", "from": 3, "label": "h", "to": 4, "width": 5}, {"color": "rgba(40,174,127,0.7)", "from": 3, "label": "i", "to": 5, "width": 5}, {"color": "rgba(40,174,127,0.7)", "from": 5, "label": "j", "to": 6, "width": 5}, {"color": "rgba(40,174,127,0.7)", "from": 6, "label": "m", "to": 7, "width": 5}, {"color": "rgba(40,174,127,0.7)", "from": 6, "label": "k", "to": 8, "width": 5}, {"color": "rgba(40,174,127,0.7)", "from": 7, "label": "l", "to": 8, "width": 5}]);
 
         // adding nodes and edges to the graph
         data = {nodes: nodes, edges: edges};
